# CRUD_Project

./: pyproject.toml
backend/: models.py  router.py  schema.py
